--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/mdx": "^14.0.0",
     "lucide-react": "^0.556.0",
     "next": "14.1.0",
+    "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18"
   },
